# onfp

./: LICENSE  README.md  docker-compose.yaml
docs/design/: es_cluster.drawio  high_level.drawio
logstash/: Dockerfile
logstash/pipeline/: logstash.conf
logstash/script/: sflowtool-wrapper.sh
nginx/: nginx.conf
prometheus/: prometheus.yml
script/: README.md  generate_flow.py  netflow_traffic.pcap  pyproject.toml  send_netflow.py  send_netflow_v5.py  send_netflow_v9.py  send_sflow_v5.py
